@@ -22,12 +22,12 @@ $valid_ints = array(
                 "'0x12ab'" => '0x12ab',
                 "'0Xfff'" => '0Xfff',
                 "'0XFA'" => '0XFA',
-                "-0x80000000" => -0x80000000, // max negative integer as hexadecimal
+                "-0x80000000" => -0x7FFFFFFF - 1, // max negative integer as hexadecimal
                 "'0x7fffffff'" => '0x7fffffff',  // max positive integer as hexadecimal
                 "0x7FFFFFFF" => 0x7FFFFFFF,  // max positive integer as hexadecimal
                 "'0123'" => '0123',        // integer as octal
                 "01912" => 01,       // should be quivalent to octal 1
-                "-020000000000" => -020000000000, // max negative integer as octal
+                "-020000000000" => -017777777777 - 1, // max negative integer as octal
                 "017777777777" => 017777777777,  // max positive integer as octal
 );
 
