@@ -13,12 +13,12 @@ serialize_precision=17
 echo "*** Testing var_export() with valid float values ***\n";
 // different valid  float vlaues 
 $valid_floats = array(
-	  "-2147483649" => -2147483649, // float value
-	  "2147483648" => 2147483648,  // float value
-	  "-0x80000001" => -0x80000001, // float value, beyond max negative int
-	  "0x800000001" => 0x800000001, // float value, beyond max positive int
-	  "020000000001" => 020000000001, // float value, beyond max positive int
-	  "-020000000001" => -020000000001, // float value, beyond max negative int
+	  "-2147483649" => (float)-2147483649, // float value
+	  "2147483648" => (float)2147483648,  // float value
+	  "-0x80000001" => (float)-0x80000001, // float value, beyond max negative int
+	  "0x800000001" => (float)0x800000001, // float value, beyond max positive int
+	  "020000000001" => (float)020000000001, // float value, beyond max positive int
+	  "-020000000001" => (float)-020000000001, // float value, beyond max negative int
 	  "0.0" => 0.0,
 	  "-0.1" => -0.1,
 	  "10.0000000000000000005" => 10.0000000000000000005,
@@ -54,45 +54,45 @@ foreach($valid_floats as $key => $float_value) {
 *** Output for float values ***
 
 -- Iteration: -2147483649 --
--2147483649
--2147483649
-string(11) "-2147483649"
+-2147483649.0
+-2147483649.0
+string(13) "-2147483649.0"
 
 
 -- Iteration: 2147483648 --
-2147483648
-2147483648
-string(10) "2147483648"
+2147483648.0
+2147483648.0
+string(12) "2147483648.0"
 
 
 -- Iteration: -0x80000001 --
--2147483649
--2147483649
-string(11) "-2147483649"
+-2147483649.0
+-2147483649.0
+string(13) "-2147483649.0"
 
 
 -- Iteration: 0x800000001 --
-34359738369
-34359738369
-string(11) "34359738369"
+34359738369.0
+34359738369.0
+string(13) "34359738369.0"
 
 
 -- Iteration: 020000000001 --
-2147483649
-2147483649
-string(10) "2147483649"
+2147483649.0
+2147483649.0
+string(12) "2147483649.0"
 
 
 -- Iteration: -020000000001 --
--2147483649
--2147483649
-string(11) "-2147483649"
+-2147483649.0
+-2147483649.0
+string(13) "-2147483649.0"
 
 
 -- Iteration: 0.0 --
-0
-0
-string(1) "0"
+0.0
+0.0
+string(3) "0.0"
 
 
 -- Iteration: -0.1 --
@@ -102,21 +102,21 @@ string(20) "-0.10000000000000001"
 
 
 -- Iteration: 10.0000000000000000005 --
-10
-10
-string(2) "10"
+10.0
+10.0
+string(4) "10.0"
 
 
 -- Iteration: 10.5e+5 --
-1050000
-1050000
-string(7) "1050000"
+1050000.0
+1050000.0
+string(9) "1050000.0"
 
 
 -- Iteration: 1e5 --
-100000
-100000
-string(6) "100000"
+100000.0
+100000.0
+string(8) "100000.0"
 
 
 -- Iteration: 1e-5 --
@@ -126,21 +126,21 @@ string(21) "1.0000000000000001E-5"
 
 
 -- Iteration: 1e+5 --
-100000
-100000
-string(6) "100000"
+100000.0
+100000.0
+string(8) "100000.0"
 
 
 -- Iteration: 1E5 --
-100000
-100000
-string(6) "100000"
+100000.0
+100000.0
+string(8) "100000.0"
 
 
 -- Iteration: 1E+5 --
-100000
-100000
-string(6) "100000"
+100000.0
+100000.0
+string(8) "100000.0"
 
 
 -- Iteration: 1E-5 --
@@ -150,9 +150,9 @@ string(21) "1.0000000000000001E-5"
 
 
 -- Iteration: .5e+7 --
-5000000
-5000000
-string(7) "5000000"
+5000000.0
+5000000.0
+string(9) "5000000.0"
 
 
 -- Iteration: .6e-19 --
