@@ -112,7 +112,7 @@ float(I%s)
 I%s
 I%s
 ------
-0
+0.0
 float(0)
 0
 0
@@ -122,7 +122,7 @@ float(I%s)
 I%s
 I%s
 ------
-0
+0.0
 float(0)
 0
 0
